# vox-launcher

./: INSTALL  Makefile_old  ProjectHome.md  README  TODO  configure.ac
conf/: Makefile  vox-launcher_en-GB.conf  vox-launcher_en-US.conf  vox-launcher_it-IT.conf
debian/: control  vox-launcher.postinst.debhelper  vox-launcher.prerm.debhelper
debian/vox-launcher/DEBIAN/: control  md5sums
debian/vox-launcher/usr/share/doc/vox-launcher/: README
debian/vox-launcher/usr/share/locale/it/LC_MESSAGES/: vox-launcher.mo
debian/vox-launcher/usr/share/python-support/: vox-launcher.private
desktop/: vox-launcher.desktop.in
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  ProcessText.py  grid.py  reporter.py  sparql.py  statusicon.py  vox-launcher.py  vox-osd
trunk/: Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.ac
trunk/conf/: Makefile.am  Makefile.in  vox-launcher_en-GB.conf  vox-launcher_en-US.conf  vox-launcher_it-IT.conf
trunk/debian/: changelog  control  files  vox-launcher.postrm.debhelper
trunk/debian/vox-launcher/DEBIAN/: conffiles  postinst  postrm  prerm
trunk/debian/vox-launcher/usr/doc/vox-launcher/: ChangeLog
trunk/debian/vox-launcher/usr/share/doc/vox-launcher/: TODO
trunk/debian/vox-launcher/usr/share/menu/: vox-launcher
trunk/debian/vox-launcher/usr/share/vox-launcher/: statusicon.py
trunk/desktop/: Makefile  Makefile.am  Makefile.in  vox-launcher.desktop.in
trunk/m4/: ChangeLog
trunk/po/: POTFILES.in  it.po
trunk/src/: Makefile.am  Makefile.in  ProcessText.py  grid.py  reporter.py  sparql.py  statusicon.py  vox-launcher.py
